# multion-pydantic

./: README.md  pydantic-query.ipynb  scrape-h&m.ipynb
fastapi_example/: .gitignore  README.md  pyproject.toml
fastapi_example/fastapi_example/: app.py  multion_pydantic.py  queries.py
